--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
     --Sidebar-Gap: 25px;
     --Sidebar-Width-Closed: 63px;
 
-    --Sidebar-Width-Open: 21vw;
+    --Sidebar-Width-Open: 300px;
     --Sidebar-LPad-Open: 15px;
 }
 
@@ -135,7 +135,7 @@ body{
 zam-sidebar {
     background-color: var(--GrigioScuro);
     height: 100%;
-    width: calc(35px + (var(--Sidebar-LPad-Open) / 2));
+    width: calc(35px + (var(--Sidebar-LPad-Open) / 4));
 
     position: fixed;
     display: flex;
