--- a/css/main.css
+++ b/css/main.css
@@ -426,3 +426,27 @@ div[row] {
 *[zam-conditional] {
     display: none !important;
 }
+
+.indicatore {
+    margin: 10px;
+
+    width: 10px;
+    height: 10px;
+
+    border-radius: 100%;
+
+    background-color: var(--GrigioChiaro);
+    box-shadow: 0px 0px 15px 5px var(--GrigioChiaro);
+
+    transition: background-color 0.25s ease-in-out;
+}
+
+.indicatore[occupato] {
+    background-color: var(--Rosso);
+    box-shadow: 0px 0px 15px 5px var(--Rosso);
+}
+
+.indicatore[libero] {
+    background-color: var(--Verde);
+    box-shadow: 0px 0px 15px 5px var(--Verde);
+}
